adjustment: surface color

--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -85,15 +85,16 @@
 	--color-error-700: 163 44 36; /* ⬅ #a32c24 */
 	--color-error-800: 130 35 29; /* ⬅ #82231d */
 	--color-error-900: 106 29 24; /* ⬅ #6a1d18 */
-	/* surface | #4e5f97 */
-	--color-surface-50: 228 231 239; /* ⬅ #e4e7ef */
-	--color-surface-100: 220 223 234; /* ⬅ #dcdfea */
-	--color-surface-200: 211 215 229; /* ⬅ #d3d7e5 */
-	--color-surface-300: 184 191 213; /* ⬅ #b8bfd5 */
-	--color-surface-400: 131 143 182; /* ⬅ #838fb6 */
-	--color-surface-500: 78 95 151; /* ⬅ #4e5f97 */
-	--color-surface-600: 70 86 136; /* ⬅ #465688 */
-	--color-surface-700: 59 71 113; /* ⬅ #3b4771 */
-	--color-surface-800: 47 57 91; /* ⬅ #2f395b */
-	--color-surface-900: 38 47 74; /* ⬅ #262f4a */
+	/* surface | #0c1222 */
+
+	--color-surface-50: 219 219 222; /* ⬅ #dbdbde */
+	--color-surface-100: 206 208 211; /* ⬅ #ced0d3 */
+	--color-surface-200: 194 196 200; /* ⬅ #c2c4c8 */
+	--color-surface-300: 158 160 167; /* ⬅ #9ea0a7 */
+	--color-surface-400: 85 89 100; /* ⬅ #555964 */
+	--color-surface-500: 12 18 34; /* ⬅ #0c1222 */
+	--color-surface-600: 11 16 31; /* ⬅ #0b101f */
+	--color-surface-700: 9 14 26; /* ⬅ #090e1a */
+	--color-surface-800: 7 11 20; /* ⬅ #070b14 */
+	--color-surface-900: 6 9 17; /* ⬅ #060911 */
 }
