change: new primary color

--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -19,17 +19,17 @@
 	--on-error: 255 255 255;
 	--on-surface: 255 255 255;
 	/* =~= Theme Colors  =~= */
-	/* primary | #56c9fb */
-	--color-primary-50: 230 247 254; /* ⬅ #e6f7fe */
-	--color-primary-100: 221 244 254; /* ⬅ #ddf4fe */
-	--color-primary-200: 213 242 254; /* ⬅ #d5f2fe */
-	--color-primary-300: 187 233 253; /* ⬅ #bbe9fd */
-	--color-primary-400: 137 217 252; /* ⬅ #89d9fc */
-	--color-primary-500: 86 201 251; /* ⬅ #56c9fb */
-	--color-primary-600: 77 181 226; /* ⬅ #4db5e2 */
-	--color-primary-700: 65 151 188; /* ⬅ #4197bc */
-	--color-primary-800: 52 121 151; /* ⬅ #347997 */
-	--color-primary-900: 42 98 123; /* ⬅ #2a627b */
+	/* primary | #3770e1 */
+	--color-primary-50: 225 234 251; /* ⬅ #e1eafb */
+	--color-primary-100: 215 226 249; /* ⬅ #d7e2f9 */
+	--color-primary-200: 205 219 248; /* ⬅ #cddbf8 */
+	--color-primary-300: 175 198 243; /* ⬅ #afc6f3 */
+	--color-primary-400: 115 155 234; /* ⬅ #739bea */
+	--color-primary-500: 55 112 225; /* ⬅ #3770e1 */
+	--color-primary-600: 50 101 203; /* ⬅ #3265cb */
+	--color-primary-700: 41 84 169; /* ⬅ #2954a9 */
+	--color-primary-800: 33 67 135; /* ⬅ #214387 */
+	--color-primary-900: 27 55 110; /* ⬅ #1b376e */
 	/* secondary | #ad5f05 */
 	--color-secondary-50: 243 231 218; /* ⬅ #f3e7da */
 	--color-secondary-100: 239 223 205; /* ⬅ #efdfcd */
@@ -98,3 +98,15 @@
 	--color-surface-800: 7 11 20; /* ⬅ #070b14 */
 	--color-surface-900: 6 9 17; /* ⬅ #060911 */
 }
+
+/* primary | #56c9fb og primary*/
+/* --color-primary-50: 230 247 254; ⬅ #e6f7fe */
+/* --color-primary-100: 221 244 254; ⬅ #ddf4fe */
+/* --color-primary-200: 213 242 254; ⬅ #d5f2fe */
+/* --color-primary-300: 187 233 253; ⬅ #bbe9fd */
+/* --color-primary-400: 137 217 252; ⬅ #89d9fc */
+/* --color-primary-500: 86 201 251; ⬅ #56c9fb */
+/* --color-primary-600: 77 181 226; ⬅ #4db5e2 */
+/* --color-primary-700: 65 151 188; ⬅ #4197bc */
+/* --color-primary-800: 52 121 151; ⬅ #347997 */
+/* --color-primary-900: 42 98 123; ⬅ #2a627b */
