--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,2 +1,3 @@
 /*place global styles here */
 html, body { @apply h-full overflow-hidden transition duration-200; }
+p{ @apply !text-xs sm:text-sm md:!text-base}
